# moo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  moo.ini  moo.pro  qtdeploy.cmake
.github/workflows/: ccpp.yml  release.yml
Core/: moo.db
Daemon/: CMakeLists.txt  Daemon.pro  main.cpp
Editor/: CMakeLists.txt  Editor.pro  editor.cpp  editor.h
EditorTest/: EditorTest.pro  cursesreader.cpp  cursesreader.h  editorapplication.cpp  editorapplication.h  main.cpp
Server/: CMakeLists.txt  Info.plist  Server.pro  Server.qrc  Server.rc  artmoo-server.desktop  codeeditor.cpp  codeeditor.h  linenumberarea.cpp  linenumberarea.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moo-icon.icns  mooitemmodel.cpp  mooitemmodel.h  objectselector.cpp  objectselector.h  objectselector.ui  syntaxhighlighterlua.cpp  syntaxhighlighterlua.h
ServerCore/: CMakeLists.txt  ServerCore.pro  connection.cpp  connection.h  connectionmanager.cpp  connectionmanager.h  func.cpp  func.h  inputsinkeditor.cpp  inputsinkeditor.h  inputsinkedittext.cpp  inputsinkedittext.h  inputsinkprogram.cpp  inputsinkprogram.h  inputsinkread.cpp  inputsinkread.h  inputsinkset.cpp  inputsinkset.h  lineedit.cpp  lineedit.h  listener.cpp  listener.h  listenerserver.cpp  listenerserver.h  listenersocket.h  listenertelnet.cpp  listenertelnet.h  listenertelnetsocket.cpp  listenertelnetsocket.h  listenerwebsocket.cpp  listenerwebsocket.h  lua_connection.cpp  lua_connection.h  lua_json.cpp  lua_json.h  lua_listener.cpp  lua_listener.h  lua_moo.cpp  lua_moo.h  lua_object.cpp  (+53 more)
ServerCore/changeset/: change.h  changeset.cpp  changeset.h  connectionclearcookie.h  connectionclose.h  connectionnotify.h  connectionsetcookie.h  objectaliasadd.h  objectaliasdelete.h  objectcreate.h  objectpropadd.h  objectpropclear.h  objectpropdelete.h  objectrecycle.h  objectsetfertile.h  objectsetlocation.h  objectsetmodule.h  objectsetname.h  objectsetowner.h  objectsetparent.h  objectsetplayer.h  objectsetprogrammer.h  objectsetproperty.h  objectsetread.h  objectsetwizard.h  objectsetwrite.h  objectverbadd.h  objectverbdelete.h  propertysetchange.h  propertysetowner.h  propertysetread.h  propertysetwrite.h  verbaliasadd.h  verbaliasdelete.h  verbsetdirectobject.h  verbsetexecute.h  verbsetindirectobject.h  verbsetowner.h  verbsetproposition.h  verbsetread.h  (+2 more)
ServerCore/inputsink/: inputsink.h  inputsinkcommand.cpp  inputsinkcommand.h  inputsinkeditor.cpp  inputsinkeditor.h  inputsinkedittext.cpp  inputsinkedittext.h  inputsinkprogram.h  inputsinkread.cpp  inputsinkread.h  inputsinkset.cpp  inputsinkset.h
ServerCore/listeners/: listenerserialmodem.cpp  listenerserialmodem.h  listenerserver.cpp  listenerserver.h  listenerserverserial.cpp  listenerserverserial.h  listenerservertcp.cpp  listenerservertcp.h  listenerservertelnet.cpp  listenerservertelnet.h  listenerserverwebsocket.cpp  listenerserverwebsocket.h  listenersocket.cpp  listenersocket.h  listenersockettcp.cpp  listenersockettcp.h  listenersockettelnet.cpp  listenersockettelnet.h  listenersocketwebsocket.cpp  listenersocketwebsocket.h  listenertelnet.h  listenertelnetsocket.h  listenerwebsocketsocket.cpp  listenerwebsocketsocket.h
ServerCoreTests/: CMakeLists.txt  ServerCoreTests.pro  cmd_permissions.cpp  cmd_permissions.h  eval_moo.cpp  eval_moo.h  luatestdata.cpp  luatestdata.h  permissionstest.cpp  permissionstest.h  task_rollback.cpp  task_rollback.h  tst_lua_call_values.cpp  tst_lua_call_values.h  tst_lua_create.cpp  tst_lua_move.cpp  tst_lua_parent.cpp  tst_lua_pass.cpp  tst_lua_prop.cpp  tst_lua_prop.h  tst_lua_prop_inheritance.cpp  tst_lua_prop_security.cpp  tst_lua_recycle.cpp  tst_lua_task.cpp  tst_lua_verb.cpp  tst_lua_verb_call.cpp  tst_object.cpp  tst_object.h  tst_properties.cpp  tst_servertest.cpp  tst_servertest.h  tst_task.cpp  tst_task_rollback_object.cpp  tst_verbs.cpp
libs/: CMakeLists.txt  libs.pro
libs/SMTPEmailLib/: SMTPEmailLib.pro
snap/: snapcraft.yaml
snap/gui/: artmoo-server.desktop
